--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- All CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/all.min.css">
   <!-- Main Style -->
   <link rel="stylesheet" href="assets/css/style.min.css">
 
