--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   }); 
   
      link.addEventListener('click', function() {
-      window.open('https://www.pinterest.com/pinterest/' + url,
+      window.open('https://www.pinterest.com/pin/create/button/?url=' + url,
           'facebook-share-dialog',
           'width=800,height=600'
       );
