--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
     <div class="container">
       <div class="header_wrap">
         <div class="header_text">
-          <h1>Why Is This $49 Smartwatch Selling Out Across America? You Don't Want To Miss Out On This Popular
-            Smartwatch</h1>
+          <h1>Why Is This $49 Smartwatch Selling Out Globally? The Health Benefits Are Incredible</h1>
           <span>"New $49 Smartwatch Is Flying Off Shelves in the US..."</span>
         </div>
         <div class="header_review">
@@ -89,8 +88,8 @@
   <!-- section_2 -->
   <section class="section_2">
     <div class="container">
-      <div class="section2_wrap">
-        <h2>Why Are Seniors Snapping Up This Smartwatch? The Health Benefits Are Incredible</h2>
+      <div class="section2_wrap pt-4">
+    
         <!-- <div class="section2_publish">
           <img src="assets/img/section2_author.png" alt="section2_author">
           <p>by <span>Sarah Rogers</span> Technology <strong>October 10th, 2020</strong></p>
