--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
   <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:site" content="@smartwatch"/>
-<meta property="twitter:title" content="Why Is This $49 Smartwatch Selling Out Across America? You Don't Want To Miss Out On This Popular Smartwatch">
+<meta property="twitter:title" content="Why Is This $49 Smartwatch Selling Out Globally? The Health Benefits Are Incredible">
 <meta property="twitter:description" content="Why Is This $49 Smartwatch Selling Out Across America? New $49 Smartwatch Is Flying Off Shelves in the US ">
 <meta property="twitter:creator" content="@smartwatch"/>
 <meta property="twitter:image" content="assets/img/samrt-watch-img_2.jpg">
 <meta property="og:image" content="assets/img/samrt-watch-img_2.jpg" />
-<meta property="og:title" content="Why Is This $49 Smartwatch Selling Out Across America? You Don't Want To Miss Out On This Popular Smartwatch" />
+<meta property="og:title" content="Why Is This $49 Smartwatch Selling Out Globally? The Health Benefits Are Incredible" />
 <meta property="og:description" content="Why Is This $49 Smartwatch Selling Out Across America? New $49 Smartwatch Is Flying Off Shelves in the US ">
 <meta name="description" content="Why Is This $49 Smartwatch Selling Out Across America? New $49 Smartwatch Is Flying Off Shelves in the US " />
 <meta name='keywords' content='smartwatch,KoreTrak, KoreTrak watch, best smartwatch, new watch, watch'/>
   <!-- Site Title -->
-  <title>Why Is This $49 Smartwatch Selling Out Across America? You Don't Want to Miss Out On This Popular Smartwatch
+  <title>Why Is This $49 Smartwatch Selling Out Globally? The Health Benefits Are Incredible
   </title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/samrt-watch-icon_1.png" type="image/x-icon">
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="header_wrap">
         <div class="header_text">
-          <h1>Why Is This $49 Smartwatch Selling Out Globally? The Health Benefits Are Incredible</h1>
+          <h1>Why Is This $49 Smartwatch Selling Out Globally? The Health Benefits Are Incredible.</h1>
           <span>"New $49 Smartwatch Is Flying Off Shelves in the US..."</span>
         </div>
         <div class="header_review">
